# ypricemagic-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  Dockerfile  MCP.md  README.md  build-constraints.txt  docker-compose.prod.yml  docker-compose.yml  docker-stack.yml  env.example  insert_feature.py  insert_feature2.py  insert_feature3.py  nginx.conf  openapi.json  pyproject.toml  release-please-config.json  requirements.txt  setup-networks.sh
.devcontainer/: devcontainer.json
.factory/: init.sh  security-config.json  services.yaml  threat-model.md
.factory/skills/backend-refactor/: SKILL.md
.factory/skills/backend-worker/: SKILL.md
.factory/skills/frontend-worker/: SKILL.md
.factory/skills/infra-worker/: SKILL.md
.factory/skills/ypricemagic-server/: SKILL.md
.factory/validation/check-bucket-upgrade/scrutiny/: synthesis.json
.factory/validation/check-bucket-upgrade/scrutiny/reviews/: check-bucket-lock-and-metadata.json  check-bucket-new-tests.json  check-bucket-pr.json
.factory/validation/check-bucket-upgrade/user-testing/: synthesis.json
.factory/validation/check-bucket-upgrade/user-testing/flows/: all-assertions.json
.factory/validation/core-upgrade/scrutiny/: synthesis.json
.factory/validation/core-upgrade/scrutiny/reviews/: block-timestamp-in-response.json  docker-rebuild-verify.json  enhanced-health-endpoint.json  fail-to-none-error-handling.json  new-price-params.json  update-ypricemagic-dependency.json
.factory/validation/core-upgrade/user-testing/: synthesis.json
.factory/validation/core-upgrade/user-testing/flows/: core-block-timestamp.json  core-build-health.json  core-fail-retry.json  core-price-params.json
.factory/validation/dep-and-health/scrutiny/: synthesis.json
.factory/validation/dep-and-health/scrutiny/reviews/: health-status-indicator.json  update-ypricemagic.json
.factory/validation/dep-and-health/user-testing/: synthesis.json
.factory/validation/dep-and-health/user-testing/flows/: browser-ui.json  code-analysis.json
.factory/validation/docs-and-config/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/docs-and-config/scrutiny/reviews/: docker-deploy-verification.json  fix-docker-deploy-reverification.json  fix-readme-descoped-endpoints.json  readme-update.json  (+3 more)
.factory/validation/docs-and-config/user-testing/: synthesis.json
.factory/validation/frontend-polish-2/scrutiny/: synthesis.json
.factory/validation/frontend-polish-2/user-testing/: synthesis.json
.factory/validation/misc-cleanup-2/scrutiny/: synthesis.json
.factory/validation/misc-cleanup-2/user-testing/: synthesis.json
.factory/validation/misc-cleanup/scrutiny/: synthesis.json
.factory/validation/misc-cleanup/user-testing/: synthesis.json
.factory/validation/misc-postquote-1/scrutiny/: synthesis.json
.factory/validation/misc-postquote-1/user-testing/: synthesis.json
.factory/validation/misc-postvalidation-1/scrutiny/: synthesis.json
.factory/validation/misc-postvalidation-1/user-testing/: synthesis.json
.factory/validation/new-endpoints/scrutiny/: synthesis.json
.factory/validation/new-endpoints/user-testing/: synthesis.json  synthesis.round1.json
.factory/validation/quote-backend/scrutiny/: synthesis.json
.factory/validation/remove-skip-cache/scrutiny/: synthesis.json
.factory/validation/remove-skip-cache/user-testing/: synthesis.json
.factory/validation/startup-and-ux/scrutiny/: synthesis.json
.factory/validation/startup-and-ux/user-testing/: synthesis.json
.factory/validation/static-ui-extraction/scrutiny/: synthesis.json
.factory/validation/static-ui-extraction/user-testing/: synthesis.json
.factory/validation/token-autocomplete/scrutiny/: synthesis.json
.factory/validation/token-autocomplete/user-testing/: synthesis.json
.factory/validation/tokenlist-management/scrutiny/: synthesis.json
.factory/validation/tokenlist-management/user-testing/: synthesis.json
.factory/validation/ui-and-docs-fixes/scrutiny/: synthesis.json
.factory/validation/ui-and-docs-fixes/user-testing/: synthesis-round-1.json  synthesis.json
.factory/validation/ui-polish/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/ui-polish/user-testing/: synthesis.json  synthesis.round2.json
.factory/validation/ui-quote-and-charts/scrutiny/: synthesis.json
.factory/validation/zero-downtime-deploy/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/zero-downtime-deploy/user-testing/: synthesis.json  synthesis.round1.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  docker-publish.yml  openapi.yml  pr-review.yml  release.yml
cache/defillama-prices/: cache.db
docs/: dex-routing-analysis.md  val-core-upgrade.md  val-cross-assertions.md  validation-assertions-new-endpoints.md  ypricemagic-unused-features.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/tokenlists/: uniswap-default.json
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: api.test.ts  api.ts  health.test.ts  health.ts  types.ts  utils.test.ts  utils.ts
frontend/src/lib/components/: Autocomplete.svelte  BatchForm.svelte  BucketForm.svelte  ChainSelector.svelte  Header.svelte  QuoteForm.svelte  TokenlistModal.svelte  UnknownTokenModal.svelte  unknown-token-modal.test.ts
frontend/src/lib/stores/: chain.ts  default-tokens.ts  tokenlist.test.ts  tokenlist.ts
runbooks/: incident-response.md
scripts/: deploy.sh  export_openapi.py  retry_failed_prices.py  strip_depends_on.py  test_exotic_pricing.py  test_stablecoin_pricing.py  test_web_ui.py  update_tokenlist.py  validate_prices.py
src/: cache.py  logger.py  params.py  server.py
src/tests/: conftest.py  test_cache.py  test_logger.py  test_params.py  test_server.py  test_static.py
static/: index.html
static/css/: style.css
static/js/: app.js
traefik-proxy/: README.md  docker-compose.yml  env.example
(+82 files in other folders)
