[project]
name = "ypricemagic-server"
version = "0.2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ypricemagic==5.2.5",
    "fastapi",
    "uvicorn[standard]",
    "diskcache",
    "structlog",
    "prometheus-client",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "setuptools<82",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "mypy",
    "ruff",
    "deptry",
    "vulture",
    "pre-commit",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--durations=10 -v -p no:pytest_ethereum -p no:pytest-brownie"

[tool.coverage.run]
source = ["src"]
omit = ["src/tests/*", "src/server.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.deptry]
per_rule_ignores = {DEP002 = ["uvicorn", "setuptools", "pre-commit", "pytest-cov", "pytest-randomly", "mypy", "ruff", "deptry", "vulture"], DEP003 = ["brownie", "dank_mids", "y", "web3"]}
