[project]
name = "ypricemagic-server"
version = "0.12.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ypricemagic @ git+https://github.com/SatoshiAndKin/ypricemagic.git@master",
    "fastapi",
    "uvicorn[standard]",
    "diskcache",
    "structlog",
    "prometheus-client",
    "tenacity",
    "setuptools<82",
    "sentry-sdk>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-randomly",
    "httpx>=0.27,<1.0",
    "mypy",
    "ruff",
    "deptry",
    "vulture",
    "pre-commit",
]

[tool.uv]
prerelease = "allow"
extra-build-dependencies = { ypricemagic = ["cchecksum==0.3.7.dev0"] }
build-constraint-dependencies = ["cchecksum>=0.3.0.dev0"]
override-dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-forked>=1.6",
    "cchecksum>=0.4.3",
    "faster-eth-utils>=5.3.25",
    "protobuf>=6.33.5,<7",
    "ujson>=5.12.0",
    "urllib3>=2.6.3",
    "wheel>=0.46.2",
    "packaging>=24.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]  # CLI scripts use print() for output

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--durations=10 -v -p no:pytest_ethereum -p no:pytest-brownie"

[tool.coverage.run]
source = ["src"]
omit = ["src/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.deptry]
per_rule_ignores = {DEP001 = ["playwright"], DEP002 = ["uvicorn", "setuptools", "pre-commit", "pytest-cov", "pytest-randomly", "pytest-asyncio", "httpx", "mypy", "ruff", "deptry", "vulture"], DEP003 = ["brownie", "dank_mids", "y", "web3", "yaml"]}
